2012-2-12  Yu-Sung Su <ys463@columbia.edu>  
    * DESCRIPTION (Version, Date): 0.03-02.
    * R/jags.parallel: add new function that runs jags parallely

2011-8-8  Masanao Yajima <yajima@ucla.edu>  
    * DESCRIPTION (Version, Date): 0.02-29.
    * R/jags: Cleaned up the code.

2011-7-28  Yu-Sung Su <ys463@columbia.edu>  
    * DESCRIPTION (Version, Date): 0.02-28.
    * R/recompile/jags: add end.adaptation=TRUE  

2011-7-21  Yu-Sung Su <ys463@columbia.edu>  
    * DESCRIPTION (Version, Date): 0.02-16.
    * R/print: fix a bug that would print out NA when DIC=FALSE

2011-3-30  Yu-Sung Su <ys463@columbia.edu>  
    * DESCRIPTION (Version, Date): 0.02-15.
    * R/print: fix a bug that would print out variable name wrongly

2011-3-17  Yu-Sung Su <ys463@columbia.edu>  
    * DESCRIPTION (Version, Date): 0.02-14.
    * R/print: miscollect sds as means in printout

2011-3-10  Yu-Sung Su <ys463@columbia.edu>  
    * DESCRIPTION (Version, Date): 0.02-13.
    * R/print: allow output to print with user-specified quantile

2010-12-8  Yu-Sung Su <ys463@columbia.edu>  
    * DESCRIPTION (Version, Date): 0.02-11.
    * man/jags: \dontrun jags2, need to write a function to search for JAGS.

2010-9-28  Yu-Sung Su <ys463@columbia.edu>  
    * DESCRIPTION (Version, Date): 0.02-10.
    * man/traceplot: comment out docType


2010-8-10  Yu-Sung Su <ys463@columbia.edu>  
    * DESCRIPTION (Version, Date): 0.02-09.
    * man/jags: reactivate dic.samples example.


2010-5-23  Yu-Sung Su <ys463@columbia.edu>  
    * DESCRIPTION (Version, Date): 0.02-08.
    * man/jags: reactivate dic.samples example.

2010-5-18  Yu-Sung Su <ys463@columbia.edu>  
    * DESCRIPTION (Version, Date): 0.02-02.
    * R/jags2: 
        1. fix a bug in jagsscript.  
        2. change CODAIndex to CODAindex
    * R/jags.sim: change CODAIndex to CODAindex

2010-2-3  Yu-Sung Su <ys463@columbia.edu>  
    * DESCRIPTION (Version, Date): 0.02-01.
    * R/as.bugs.array: fix sims.list permutation