@@ -1,11 +1,11 @@
 Package: R2jags
-Version: 0.03-02
-Date: 2012-1-12
+Version: 0.03-03
+Date: 2012-1-22
 Title: A Package for Running jags from R
 Author: Yu-Sung Su <suyusung@tsinghua.edu.cn>, 
         Masanao Yajima <yajima@stat.columbia.edu>,
 Maintainer: Yu-Sung Su <suyusung@tsinghua.edu.cn>
-Depends: methods, R (>= 2.14.0), coda (>= 0.13), R2WinBUGS, rjags (>= 3-3), parallel
+Depends: methods, R (>= 2.14.0), coda (>= 0.13), R2WinBUGS, rjags (>= 3-3), abind, parallel
 SystemRequirements: jags (>= 3.3.0)
 Description: Using this package to call jags from R.
 License: GPL (>= 2)
